--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-scroll-rect",
+  "name": "@imengyu/vue-scroll-rect",
   "version": "0.1.0",
   "description": "A scroll rect component for Vue3",
   "main": "lib/vue-scroll-rect.umd.js",
@@ -8,6 +8,10 @@
     "lib",
     "index.d.ts"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "build": "vitepress build ./docs",
     "build-lib": "vite build src",
