--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://registry.npmjs.com"
   },
   "scripts": {
     "build": "vitepress build ./docs",
